@@ -55,13 +55,13 @@ public class FileController {
             System.out.println(userFile);
         }
         // 파일 ID 목록을 추출
-        List<Long> fileIds = userFiles.stream()
-                .map(userFile -> userFile.getFile().getId())
-                .collect(Collectors.toList());
-
-        // 파일 ID 목록을 사용하여 파일 정보를 가져옴
-        List<File> files = fileRepository.findByIdIn(fileIds);
-        return ResponseEntity.ok().body(files.stream().map(FileDto::convert).toList());
+//        List<Long> fileIds = userFiles.stream()
+//                .map(userFile -> userFile.getFile().getId())
+//                .collect(Collectors.toList());
+//
+//        // 파일 ID 목록을 사용하여 파일 정보를 가져옴
+//        List<File> files = fileRepository.findByIdIn(fileIds);
+//        return ResponseEntity.ok().body(files.stream().map(FileDto::convert).toList());
     }
     @PostMapping("/file/create")
     public ResponseEntity<? extends BaseResponse> addFile(@RequestBody FileCreateDTO fileCreateDTO){
